--- a/src/Pages/Status/Status.module.css
+++ b/src/Pages/Status/Status.module.css
@@ -13,6 +13,10 @@
   width: 100%;
 }
 
+.calendarContainer {
+  margin: 0 1rem;
+}
+
 .calendar {
 }
 
@@ -48,7 +52,7 @@
   border: none;
   width: 7.5rem;
   height: 3rem;
-  margin: 0 1.5rem;
+  margin: 0 0.5rem;
   border-radius: 0.5rem;
   padding: 0 0.75rem;
   font-size: medium;
@@ -60,7 +64,7 @@
 }
 
 .time {
-  margin: 0.75rem 1.5rem 0 1.5rem;
+  /* margin: 0.75rem 1.5rem 0 1.5rem; */
 }
 
 .fileContainer {
@@ -115,7 +119,7 @@
   min-width: 3rem;
   border: none;
   border-radius: 5rem;
-  margin: 0 1.5rem;
+  margin: 0 0.5rem;
   background-color: var(--first-button-color);
   box-shadow: 0 10px 10px -10px var(--shadow-color);
   font-size: medium;
@@ -134,13 +138,12 @@
 .table {
   display: flex;
   justify-content: center;
-  width: 80vw;
+  width: 60vw;
   margin: 5rem 0 3rem 0;
 }
 
 .lastColumn {
   display: flex;
-  flex-direction: column;
   align-items: center;
 }
 
@@ -156,6 +159,9 @@
   .fakeInput {
     margin: 0.75rem;
   }
+  .lastColumn {
+    flex-direction: column;
+  }
 }
 
 @media screen and (max-width: 600px) {
@@ -168,5 +174,8 @@
   .button,
   .fakeInput {
     margin: 0.5rem 0;
+  }
+  .lastColumn {
+    flex-direction: column;
   }
 }
